update privacy